--- a/style.css
+++ b/style.css
@@ -89,10 +89,9 @@ p {
  * -- PRICING TABLE  --
  * Every pricing table has the .pricing-table class
  */
-.pricing-table {
+.project-table {
     border: 1px solid #ddd;
     margin: 0 0.5em 2em;
-    padding: 0 0 3em;
 }
 
 /*
@@ -116,6 +115,10 @@ p {
         font-weight: normal;
 
     }
+      .pricing-table-header-image {
+        height: 250px;
+        width: 250px;
+      }
 
 
 /*
@@ -155,10 +158,15 @@ p {
  * -- PRICING TABLE LIST ELEMENTS --
  * Styles for the individual list elements within each pricing table
  */
+
+ .list-li {
+   background: white;
+ }
+
 .pricing-table-list li {
     padding: 0.8em 0;
-    background: #f7f7f7;
-    border-bottom: 1px solid #e7e7e7;
+    background: #FFF;
+    border: 1px solid #e7e7e7;
 }
 
 
@@ -174,12 +182,13 @@ p {
     border-radius: 2em;
     font-weight: bold;
     position: relative;
-    bottom: -1.5em;
 }
 
-.information-head {
+.info-head {
     color: black;
-    font-weight: 500;
+    font-size: 60px;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
 }
 
 .footer {
@@ -190,6 +199,18 @@ p {
     .footer a {
         color: #ddd;
     }
+
+.about-section {
+  padding-top: 10px;
+  padding-bottom: 60px;
+  align-items: center;
+}
+
+.about-photo {
+  border-radius: 50%;
+  height: 350px;
+  width: 350px;
+}
 
 
 
